home file changed

--- a/client/src/VideoPlayer/VideoPlayer.css
+++ b/client/src/VideoPlayer/VideoPlayer.css
@@ -1,12 +1,50 @@
-.video-container{
-    text-align: center;
-}
-
-.yt-iframe{
+.video-player-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .video-container {
+    width: 100vw;
+    max-width: 1000px; 
+  }
+  
+  .yt-iframe {
     padding: 15px;
     background-color: white;
     border: 3px double black;
     border-radius: 10px;
     height: 80vh;
     width: 80vw;
-}
+    max-width: 100%;
+  }
+  
+  .title-container {
+    margin-top: 20px;
+    max-width: 800px; 
+    width: 100%;
+  }
+  
+  @media (max-width: 768px) {
+    .yt-iframe {
+      height: 60vh; 
+    }
+  }
+  
+  .notepad-container {
+    margin-top: 20px;
+    width: 80vw;
+    max-width: 800px; 
+  }
+  
+  .notepad {
+    padding: 15px;
+    background-color: white;
+    border: 3px double black;
+    border-radius: 10px;
+    margin-top: 20px;
+    height: 300px;
+    width: 100%; 
+    overflow-y: auto;
+  }
+  
