--- a/client/src/Dashboard/Dashboard.css
+++ b/client/src/Dashboard/Dashboard.css
@@ -1,13 +1,37 @@
-.form-add-video{
-    background-color:#ffe5cc ;
-    padding: 10px;
-    border-radius: 15px;
-    border: 3px double black;
+.container {
+    max-width: 1200px; 
+    margin-left: auto;
+    margin-right: auto;
 }
-.btn-add-video{
-    width: 300px;
+
+.title-container {
+    margin-top: 20px;
+}
+
+.btn-logout {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
 
+.form-add-video {
+    background-color: #ffe5cc;
+    padding: 10px;
+    border-radius: 15px;
+    border: 3px double black;
+    margin-top: 20px;
+}
+
+.custom-btn {
+    width: 100%;
+}
+
+@media (min-width: 576px) {
+    .form-add-video {
+        padding: 20px;
+    }
+
+    .custom-btn {
+        width: auto;
+    }
 }
