--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -1,30 +1,61 @@
-.input-search{
+.input-search {
     height: 40px;
-    width: 500px;
+    width: 100%;
+    max-width: 500px; 
     border: none;
     margin-left: 15px;
     outline: none;
 }
 
-.search-bar{
+.search-bar {
     background-color: white;
-    width: 600px;
+    width: 100%;
+    max-width: 600px; 
     margin-left: auto;
     margin-right: auto;
     padding: 5px;
     border-radius: 10px;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
     font-size: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
-   
 }
-.ico-search{
+
+.title-container {
+    background-color: white;
+    width: 100%;
+    max-width: 600px; 
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.ico-search {
     height: 40px;
 }
 
-.toggle{
-padding: 2%;
-margin-left: 1200px;
-margin-right: 90px;
+.toggle {
+    padding: auto;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px; 
+}
+
+@media (max-width: 768px) {
+    .toggle {
+        margin-left: auto;
+        margin-right: 0; 
+        margin-top: auto;
+    }
+
+    .search-bar {
+        font-size: 20px;
+        padding: 3px;
+    }
 }
